--- a/JavaFXAll/nbproject/project.properties
+++ b/JavaFXAll/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=JavaFXAll
-main.class=zapocty.circles.LBClick.JavaApplication15
+main.class=zapocty.grafSinCos.GrafSinCos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
